<resources>
    <string name="app_name">CyberSource Mpos</string>
    <string name="cybersource">CyberSource</string>
    <string name="empty"></string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_price">$0.00</string>
    <string name="goods_and_services">Goods/Services</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_history">History</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_notes">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_skip">Skip</string>
    <string name="card_reader_not_connected">Card reader not connected</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="proceed">Proceed</string>
    <string name="title_dialog">I am a title</string>
    <string name="dialog_positive_lable">Positive</string>
    <string name="dialog_negative_lable">Negative</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="merchant_id_hint">Merchant ID</string>
    <string name="password_hint">Password</string>
    <string name="forgot_merchant_id">Forgot Merchant ID or Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="copyright">&#169;</string>
    <string name="rights_reserved_visa_inc">CyberSource, a Visa company. All Rights Reserved.</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="swipe_card_now">Swipe Card Now</string>
    <string name="swipe_card_total">Subtotal: $</string>
    <string name="title_activity_add_item">AddItemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_swipe_card">SwipeCardActivity</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="agree_to_pay">I agree to pay the above total amount according to my card issuer agreement.</string>
    <string name="visa">Visa</string>
    <string name="card_ending_in">card ending in</string>
    <string name="dummy_last_four_digits">4598</string>
    <string name="title_activity_order_details">Order Summary</string>
    <string name="everything_look_good">Everything look good?</string>
    <string name="dollar">$</string>
    <string name="zero_amount">$0.00</string>
    <string name="pref_general_title">GENERAL</string>
    <string name="pref_general_key">pref_key_transaction_settings</string>
    <string name="pref_terminal_title">TERMINAL</string>
    <string name="pref_terminal_key">pref_key_terminal_settings</string>
    <string name="pref_account_title">ACCOUNT</string>
    <string name="pref_account_key">pref_key_account_settings</string>
    <string name="pref_ui_settings_title">UI SETTINGS</string>
    <string name="pref_ui_settings_key">pref_key_ui_settings</string>
    <string name="pref_about_title">ABOUT</string>
    <string name="pref_about_key">pref_key_about_settings</string>
    <string name="pref_signature_title">Signature</string>
    <string name="pref_signature_key">pref_key_signature</string>
    <string name="pref_tax_title">Tax</string>
    <string name="pref_tax_key">pref_key_tax</string>
    <string name="pref_tax_percentage_title">Tax Percentage</string>
    <string name="pref_tax_percentage_key">pref_key_tax_percentage</string>
    <string name="pref_tax_percentage_summary">%</string>
    <string name="pref_tax_percentage_dialog_summary">Will be applied to your sub total amount</string>
    <string name="pref_tip_title">Tip</string>
    <string name="pref_tip_key">pref_key_tip</string>
    <string name="pref_environment_title">Environment</string>
    <string name="pref_environment_key">pref_key_environment</string>
    <string name="pref_environment_summary">Environment</string>
    <string name="pref_merchantId_title">MerchantId</string>
    <string name="pref_merchantId_key">pref_key_merchantId</string>
    <string name="pref_merchantId_summary">Click to enter MerchantId</string>
    <string name="pref_merchantId_dialog_title">Merchant Id</string>
    <string name="pref_deviceId_title">DeviceId</string>
    <string name="pref_deviceId_key">pref_key_deviceId</string>
    <string name="pref_deviceId_summary">Click to enter DeviceId</string>
    <string name="pref_deviceId_dialog_title">Device Id</string>
    <string name="pref_clientId_title">ClientId</string>
    <string name="pref_clientId_key">pref_key_clientId</string>
    <string name="pref_clientId_summary">Click to enter ClientId</string>
    <string name="pref_clientId_dialog_title">Client Id</string>
    <string name="pref_clientSecret_title">Client Secret</string>
    <string name="pref_clientSecret_key">pref_key_clientSecret</string>
    <string name="pref_clientSecret_summary">Click to enter Client Secret</string>
    <string name="pref_clientSecret_dialog_title">Client Secret</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_key">pref_key_username</string>
    <string name="pref_username_summary">Click to enter Username</string>
    <string name="pref_username_dialog_title">Username</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_key">pref_key_password</string>
    <string name="pref_password_summary">Click to enter Password</string>
    <string name="pref_password_dialog_title">Password</string>
    <string name="pref_token_title">Token</string>
    <string name="pref_token_key">pref_key_token</string>
    <string name="pref_token_summary">Click to enter Token</string>
    <string name="pref_token_dialog_title">Token</string>
    <string name="pref_terminalId_title">TerminalId</string>
    <string name="pref_terminalId_key">pref_key_terminalId</string>
    <string name="pref_terminalId_summary">Click to enter TerminalId</string>
    <string name="pref_terminalId_dialog_title">Terminal Id</string>
    <string name="pref_terminalIdAlternate_title">TerminalId Alternate</string>
    <string name="pref_terminalIdAlternate_key">pref_key_terminalIdAlternate</string>
    <string name="pref_terminalIdAlternate_summary">Click to enter TerminalId Alternate</string>
    <string name="pref_terminalIdAlternate_dialog_title">TerminalId Alternate</string>
    <string name="pref_mid_title">MID</string>
    <string name="pref_mid_key">pref_key_mid</string>
    <string name="pref_mid_summary">Click to enter MID</string>
    <string name="pref_mid_dialog_title">MID</string>
    <string name="pref_font_color_title">Font Color</string>
    <string name="pref_font_color_key">pref_key_font_color</string>
    <string name="pref_font_color_summary">Click to enter Font Color hex value</string>
    <string name="pref_font_color_dialog_title">Font Color</string>
    <string name="pref_spinner_color_title">Spinner Color</string>
    <string name="pref_spinner_color_key">pref_key_spinner_color</string>
    <string name="pref_spinner_color_summary">Click to enter spinner Color hex value</string>
    <string name="pref_spinner_color_dialog_title">Spinner Color</string>
    <string name="pref_textLabel_color_title">TextLabel Color</string>
    <string name="pref_textLabel_color_key">pref_key_textLabel_color</string>
    <string name="pref_textLabel_color_summary">Click to enter TextLabel Color hex value</string>
    <string name="pref_textLabel_color_dialog_title">TextLabel Color</string>
    <string name="pref_detailLabel_color_title">DetailLabel Color</string>
    <string name="pref_detailLabel_color_key">pref_key_detailLabel_color</string>
    <string name="pref_detailLabel_color_summary">Click to enter DetailLabel Color hex value</string>
    <string name="pref_detailLabel_color_dialog_title">DetailLabel Color</string>
    <string name="pref_textField_color_title">TextField Color</string>
    <string name="pref_textField_color_key">pref_key_textField_color</string>
    <string name="pref_textField_color_summary">Click to enter TextField Color hex value</string>
    <string name="pref_textField_color_dialog_title">TextField Color</string>
    <string name="pref_placeHolder_color_title">PlaceHolder Color</string>
    <string name="pref_placeHolder_color_key">pref_key_placeHolder_color</string>
    <string name="pref_placeHolder_color_summary">Click to enter PlaceHolder Color hex value</string>
    <string name="pref_placeHolder_color_dialog_title">PlaceHolder Color</string>
    <string name="pref_signature_color_title">Signature Color</string>
    <string name="pref_signature_color_key">pref_key_signature_color</string>
    <string name="pref_signature_color_summary">Click to enter Signature Color hex value</string>
    <string name="pref_signature_color_dialog_title">Signature Color</string>
    <string name="pref_background_color_title">Background Color</string>
    <string name="pref_background_color_key">pref_key_background_color</string>
    <string name="pref_background_color_summary">Click to enter Background Color hex value</string>
    <string name="pref_background_color_dialog_title">Background Color</string>
    <string name="pref_image_url_title">Image URL</string>
    <string name="pref_image_url_key">pref_key_image_url</string>
    <string name="pref_image_url_summary">Click to enter image URL</string>
    <string name="pref_image_url_dialog_title">Image URL</string>
    <string name="pref_font_family_title">Font Family</string>
    <string name="pref_font_family_key">pref_key_font_family</string>
    <string name="pref_font_family_summary">Font family</string>
    <string name="pref_font_style_title">Font Style</string>
    <string name="pref_font_style_key">pref_key_font_style</string>
    <string name="pref_font_style_summary">Font Style</string>
    <string name="pref_summary">Enable with transaction</string>
    <string name="pref_privacy_title">Privacy Policy</string>
    <string name="pref_help_title">Help &amp; Feedback</string>
    <string name="pref_legal_title">Legal</string>
    <string name="switch_signature">switch_signature</string>
    <string name="switch_tax">switch_tax</string>
    <string name="switch_tip">switch_tip</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_authorizing">AuthorizingActivity</string>
    <string name="authorizing">Processing Transaction</string>
    <string name="please_wait">Please wait...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_reader_connected">Plug in reader</string>
    <string name="enter_card_details">Enter Card Details below</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_month">Invalid Month</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="invalid_zipcode">Invalid Zipcode</string>
    <string name="swipe_timeout">Swipe Time Out</string>
    <string name="unable_to_read_card">Unable to read Card Data.</string>
    <string name="card_read_error">Card Read Error</string>
    <string name="want_to_try_again">Want to try again?</string>
    <string name="again">Again</string>
    <string name="key_in_card_details">Please key in card details</string>
    <string name="or_enter_card_details">Or enter Card Details Below</string>
    <string name="xxx">xxx-</string>
    <string name="transaction_complete">Transaction Complete!</string>
</resources>