<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 CyberSource. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaseNavigationActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_cart"
            android:checked="true"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/title_shopping_cart"
        />
        <item
            android:id="@+id/navigation_item_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/title_history" />
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
    </group>
</menu>