<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2016 CyberSource. All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp">

    <ImageButton
        android:id="@+id/remove_cart_item_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_close_grey600_24dp"/>

    <TextView
        android:id="@+id/transaction_id_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="52dp"
        android:text="@string/hint_item_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_item_price"
        android:textColor="@color/darkgreen"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/timestamp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/transaction_id_text_view"
        android:layout_marginLeft="52dp"
        android:text="@string/goods_and_services"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

</RelativeLayout>